Minor visual fixes
fixed a small text format issue and removed the horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ nav{
     display: flex;
     background-color: #7d1e2e;
     color: white;
-    width: 100vw;
+    width: 100%;
     justify-content: space-evenly;
     margin-bottom: 25px;
 }
